--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 -f /usr/share/pip-wheels
 alembic==0.7.6
+certifi==2017.4.17
+chardet==3.0.3
 Flask==0.10.1
 Flask-Admin==1.1.0
 Flask-Bootstrap==3.3.4.1
@@ -9,10 +11,13 @@ Flask-Moment==0.4.0
 Flask-Script==2.0.5
 Flask-SQLAlchemy==2.0
 Flask-WTF==0.11
+idna==2.5
 itsdangerous==0.24
 Jinja2==2.7.3
 Mako==1.0.1
 MarkupSafe==0.23
+requests==2.17.1
 SQLAlchemy==1.0.4
+urllib3==1.21.1
 Werkzeug==0.10.4
 WTForms==2.0.2
